# dbx-guardrails

./: README.md  index.html  pyproject.toml
client/: __init__.py  async_client.py
config/: __init__.py  loader.py  schema.py
config/ddl/: audit_log_table.sql  configs_table.sql
core/: __init__.py  _model_client.py  _util.py  harm_guard.py  injection_gate.py  orchestrator.py  pii_guard.py  policy_engine.py  scope_guard.py  types.py
eval/: metrics.py  run_benchmark.py
eval/datasets/: __init__.py  benign_followups.py  harmbench.py  openai_moderation.py  toxicchat.py
examples/: supply_chain_qa_integration.py
monitoring/: dashboard.py  lakehouse_monitor_setup.py
serving/: deploy_endpoint.py  pyfunc_wrapper.py
tests/: test_client_integration.py  test_harm_guard.py  test_injection_gate.py  test_pii_guard.py  test_policy_engine.py  test_scope_guard.py
training/harm_classifier/: bootstrap_labels.py  train_classifier.py
training/injection_gate/: generate_adversarial.py  train_classifier.py
training/pii_necessity/: bootstrap_labels.py  train_classifier.py
training/scope_index/: build_vector_index.py
