[project]
name = "dbx-guardrails"
version = "0.1.0"
description = "Databricks-native guardrail accelerator: PII masking, scope enforcement, and harm detection behind one policy engine."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "presidio-analyzer>=2.2",
    "presidio-anonymizer>=2.2",
    "mlflow>=2.12",
    "databricks-sdk>=0.20",
    "httpx>=0.27",
]

[project.optional-dependencies]
training = [
    "torch>=2.2",
    "transformers>=4.40",
    "datasets>=2.19",
    "scikit-learn>=1.4",
]
eval = [
    "scikit-learn>=1.4",
    "pandas>=2.2",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*", "config*", "serving*", "client*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
